# naga-workgroup-memory-bug

./: .gitignore  Cargo.toml  README.md  index.html  shader-broken-on-dawn.wgsl  shader.wgsl
src/: lib.rs  main.rs
